syntax = "proto3";

package api.email.service.emailservicev1;

// 多语言特定包名，用于源代码引用
option go_package = "gitlab.lainuoniao.cn/eden-quan/proto-service/api/email-service/v1/services;emailservicev1";

import "api/proto-common/v3/services/common.services.proto";
import "api/email-service/v1/resources/email.email.resource.v1.proto";
import "google/protobuf/descriptor.proto";


// EmailV1 示例服务
service EmailServiceV1 {

  option (proto_common.common.service_name) = "email-service/v1";

  rpc SendEmail (emailv1.SendEmailRequest) returns (emailv1.SendEmailReply);
}